Fix Pubspec of hive flutter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: hive_flutter
 description: Extension for Hive. Makes it easier to use Hive in Flutter apps.
+publish_to: "none"
 version: 1.1.0
 homepage: https://github.com/hivedb/hive/tree/master/hive_flutter
 documentation: https://docs.hivedb.dev/
@@ -11,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  hive: ^2.2.1
+  hive: 
+    git:
+      url: https://github.com/masood5400/custom_hive.git
+      ref: custom_hive
   path_provider: ^2.0.10
   path: ^1.8.2
 
